[package]
name = "metadata"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
frame-metadata = "15.0.0"
hashers = "1.0.1"
parity-scale-codec = "3.2.1"
scale-info = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.83"
